Fixed login button on Firefox

--- a/assets/stylesheets/styles.less
+++ b/assets/stylesheets/styles.less
@@ -251,6 +251,7 @@ header {
 				text-shadow:0 0 2px rgba(0,0,0,0.3);
 			  background: linear-gradient(top,  rgba(131,155,195,1) 0%,rgba(87,111,163,1) 100%);
 			  background: -webkit-linear-gradient(top, rgba(131,155,195,1) 0%,rgba(87,111,163,1) 100%);
+			  background: -moz-linear-gradient(top, rgba(131,155,195,1) 0%,rgba(87,111,163,1) 100%);
 			  border: 1px solid #566383;
 			  border-radius: 5px 5px 5px 5px;
 			  box-shadow: 0 1px 0 #CADBFE inset, 0 3px 0 0 #2D447F, 0 4px 2px #999999;
